--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ url:              http://www.wangzerui.com
 baseurl:          /
 
 author:
-  name:           'Zerui Wang'
-  email:          zerui.j.wang@gmail.com
+  name:           'Weiguo Zhou(周卫国)'
+  email:          weiguochow@gmail.com
 
 paginate:         2
 
