--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,6 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-avatar =          "/public/me.jpg"
 title:            Weiguo Zhou(周卫国)
 tagline:          'Happy coding, happy blogging.'
 description:      'Start here,<br>make a difference.'
@@ -22,6 +21,7 @@ paginate:         2
 gems: [jekyll-paginate]
 
 # custom vars
+avatar :          "/public/me.jpg"
 google_analytics: UA-63207330-1
 emailme:          mailto:weiguochow@gmail.com
 github:
