--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 
 # Setup
 title:            Weiguo Zhou(周卫国)
-tagline:          'Happy coding, happy blogging.'
+tagline:          'Keep Moving.'
 description:      'Start here,<br>make a difference.'
 url:              http://www.zhouweiguo.science
 baseurl:          /
