--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ google_analytics: UA-63207330-1
 emailme:          mailto:weiguochow@gmail.com
 github:
   repo:           https://github.com/weiguochow.github.io/
-version:          Mar.04.2017
+version:          Mar.07.2017
 github_username:  weiguochow
 #facebook_username: zrwang.cuhk
 #linkedin_username: zrwang
-#twitter_username: wangzerui
+twitter_username: Weiguo Zhou
 # google_plus_username: 
 # instagram_username: wzr.mavericker
 
