--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 
 # Setup
 title:            Weiguo Zhou
-tagline:          'Keep Moving.'
+tagline:          'Keep Moving'
 description:      'Start here,<br>make a difference.'
 url:              http://www.zhouweiguo.science
 baseurl:          /
@@ -29,7 +29,7 @@ version:          Mar.07.2017
 github_username:  weiguochow
 #facebook_username: zrwang.cuhk
 #linkedin_username: zrwang
-twitter_username: Weiguo Zhou
+twitter_username: https://twitter.com/wgzhou
 # google_plus_username: 
 # instagram_username: wzr.mavericker
 
