--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ version:          Mar.07.2017
 github_username:  weiguochow
 #facebook_username: zrwang.cuhk
 #linkedin_username: zrwang
-twitter_username: https://twitter.com/wgzhou
+twitter_username: wgzhou
 # google_plus_username: 
 # instagram_username: wzr.mavericker
 
