--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            Weiguo Zhou
 tagline:          'Keep Moving'
-description:      'Start here,<br>make a difference.'
+description:      'Sow nothing, reap nothing.'
 url:              http://www.zhouweiguo.science
 baseurl:          /
 
